--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,10 +22,7 @@ jobs:
         run: dotnet test --no-build --verbosity normal
       - name: Pack NuGet package
         run: dotnet pack --no-build --configuration Release
-      - name: Publish NuGet Package
-        uses: nuget/nuget-setapikey@v1
-        with:
-          api-key: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish to GitHub Package Registry
         run: |
+          dotnet nuget add source --username rikharink --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/rikharink/index.json"
           dotnet nuget push ./artifacts/*.nupkg --source "github" --skip-duplicate
