--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Build solution
         run: dotnet build --configuration Release -p:Version=$(date +'%Y.%m.%d')-$(echo $GITHUB_SHA | cut -c1-7)
       - name: Run tests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --no-build --configuration Release --verbosity normal
       - name: Pack NuGet package
         run: dotnet pack --no-build --configuration Release
       - name: Publish to GitHub Package Registry
