--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,9 @@ on:
       - main
 jobs:
   build:
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -24,5 +27,5 @@ jobs:
         run: dotnet pack --no-build --configuration Release --output ./artifacts -p:Version=$(date +'%Y.%m.%d')-$(echo $GITHUB_SHA | cut -c1-7)
       - name: Publish to GitHub Package Registry
         run: |
-          dotnet nuget add source --username rikharink --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/rikharink/index.json"
+          dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/rikharink/index.json"
           dotnet nuget push ./artifacts/*.nupkg --source "github" --skip-duplicate
