--- a/HarinkLib/HarinkLib.csproj
+++ b/HarinkLib/HarinkLib.csproj
@@ -14,4 +14,11 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
+  <!-- include README.md and copy always-->
+  <ItemGroup>
+    <Content Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
